# aces-core

./: .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README  README.md  README.rst  SUPPORT.md
apps/cltrender/: README.rst
apps/cltrender/ctlrender/: README
apps/cltrender/ctlrender/ctl/IlmCtlMath/: CtlLinearSolver.h  CtlPointTree.h  CtlSparseMatrix.h  Makefile.am  Makefile.in
apps/cltrender/ctlrender/openexr/IlmImfCtl/: Makefile.am  Makefile.in
apps/cltrender/src/: aclocal.m4
apps/cltrender/src/ctl/IlmCtlTest/: Makefile.am  Makefile.in  testCast.ctl  testCppCall.cpp  testCppCall.ctl  testCtlVersion.ctl  testLoops.ctl  testName2.ctl  testNameSpace2.ctl  testNoName.ctl  testParser.h  testScope2.ctl  testVaryingLookup.ctl  testVaryingReturn.cpp
apps/cltrender/src/util/ctldebug/: Makefile.am
apps/ctlrender/: README.rst
apps/ctlrender/src/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
apps/ctlrender/src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
apps/ctlrender/src/ctl/: CTL.pc.in  Makefile.in
apps/ctlrender/src/ctl/IlmCtl/: CtlAddr.cpp  CtlAddr.h  CtlAlign.cpp  CtlErrors.h  CtlExc.cpp  CtlExc.h  CtlFunctionCall.cpp  CtlFunctionCall.h  CtlInterpreter.cpp  CtlInterpreter.h  CtlLex.h  CtlMessage.h  CtlModule.cpp  CtlParser.cpp  CtlParser.h  CtlRcPtr.cpp  CtlRcPtr.h  CtlSymbolTable.h  CtlSyntaxTree.cpp  CtlSyntaxTree.h  CtlTypeStorage.cpp  CtlVersion.h  Makefile.am  Makefile.in
apps/ctlrender/src/ctl/IlmCtlMath/: CtlColorSpace.h  CtlRbfInterpolator.h  Makefile.in
apps/ctlrender/src/ctl/IlmCtlMathTest/: Makefile.am  Makefile.in  main.cpp  testAffineRec.cpp  testAffineRec.h
apps/ctlrender/src/ctl/IlmCtlSimd/: CtlSimdAddr.cpp  CtlSimdFunctionCall.cpp  CtlSimdFunctionCall.h  CtlSimdInst.cpp  CtlSimdInterpreter.h  CtlSimdModule.cpp  CtlSimdOp.h  CtlSimdReg.cpp  CtlSimdStdLibInterpolator.cpp  CtlSimdStdLibInterpolator.h  CtlSimdStdLibMath.cpp  CtlSimdStdLibMath.h  CtlSimdStdLibPrint.cpp  CtlSimdStdLibPrint.h  CtlSimdStdLibTemplates.h  CtlSimdStdLibrary.cpp  CtlSimdStdLibrary.h  CtlSimdStdTypes.cpp  CtlSimdStdTypes.h  CtlSimdSyntaxTree.cpp  CtlSimdSyntaxTree.h  CtlSimdType.cpp  CtlSimdXContext.cpp  Makefile.am  Makefile.in  halfExpLog.h
apps/ctlrender/src/ctl/IlmCtlTest/: Makefile.in  example.ctl  testArray.ctl  testCppCall.h  testEndOfLine.h  testExamples.cpp  testExamples.h  testExamplesNamespace.ctl  testExpr.ctl  testInterpolator.ctl  testLiterals.ctl  testLookupTables.ctl  testName.ctl  testParse.ctl  testScope.ctl  testStdLibrary.ctl  testStruct.ctl  testTypes.ctl  testVarying.cpp  testVarying.ctl  testVaryingLookup.cpp  testVaryingLookup.h
apps/ctlrender/src/doc/: Makefile.am  Makefile.in
apps/ctlrender/src/dpx/: Makefile.in  dpx.tcc  dpx_bits.cc  dpx_raw.hh  dpx_read.cc  dpx_util.cc  dpx_util.hh
apps/ctlrender/src/m4/: path.pkgconfig.m4
apps/ctlrender/src/openexr/: Makefile.in  OpenEXR_CTL.pc  OpenEXR_CTL.pc.in
apps/ctlrender/src/openexr/CtlModules/: Makefile.am  Makefile.in  rrt  utilities  utilities.ctl
apps/ctlrender/src/openexr/IlmImfCtl/: ImfCtlApplyTransforms.cpp  ImfCtlCopyFunctionArg.cpp  ImfCtlCopyFunctionArg.h  Makefile.in
apps/ctlrender/src/openexr/IlmImfCtlTest/: Makefile.am  Makefile.in  testTypes.h
apps/ctlrender/src/util/: Makefile.in
apps/ctlrender/src/util/ctldebug/: Makefile  input.l  main.cc
apps/ctlrender/src/util/ctlrender/: Makefile.am  Makefile.in  dpx_file.hh  exr_file.cc  exr_file.hh  format.cc  main.hh  tiff_file.cc  tiff_file.hh  transform.hh  usage.cc
apps/ctlrender/src/util/ctlrender/test/: ColorBars.ai  README  bars_cinepaint_10.dpx  bars_nuke_10_be.dpx  bars_nuke_10_le.dpx  bars_nuke_16_be.dpx  bars_nuke_16_le.dpx  bars_nuke_8_le.dpx  bars_photoshop.exr  bars_photoshop_16_be_planar.tif  bars_photoshop_32_be_planar.tif  bars_photoshop_8_be_planar.tif  bars_photoshop_8_le_interleaved.tif  bars_photoshop_8_le_planar.tif  gain.ctl  gain3.ctl
apps/ctlrender/src/vc/: Makefile.in
ctl/official/lib/: Lib.Academy.DisplayEncoding.ctl  Lib.Academy.OutputTransform.ctl  Lib.Academy.Tonescale.ctl  Lib.Academy.Utilities.ctl  Lib.DisplayEncoding.ctl  Lib.Utilities.ctl  Library.DisplayEncoding.ctl  Library.Init.ctl  Library.OutputTransform.ctl  Library.Tonescale.ctl  Library.TransferFunctions.ctl  Library.Utilities.ctl
docs/: CtlManual.doc  README  README.rst
documents/: README.md
documents/LaTeX/ACES-Document-Manifest/: ACES-Document-Manifest.tex
documents/LaTeX/P-2013-001/: P-2013-001.tex  acknowledgements.tex  appendixA.tex  appendixB.tex  histanddocs.tex  introduction.tex  procedure.tex  references.tex  scope.tex  termsanddefs.tex
documents/LaTeX/P-2019-001/: P-2019-001.tex  acesLeadership.tex  appendixA.tex  appendixB.tex  background.tex  histanddocs.tex  notices.tex  organization.tex  scope.tex  tacArchitecture.tex  tacImplementation.tex  workingGroups.tex
documents/LaTeX/S-2013-001/: S-2013-001.tex  appendixA.tex  appendixB.tex  appendixC.tex  appendixD.tex  histanddocs.tex  introduction.tex  references.tex  scope.tex  specification.tex  termsanddefs.tex
documents/LaTeX/S-2014-002/: S-2014-002.tex  histanddocs.tex  introduction.tex  references.tex  scope.tex  sec-specification.tex  sec-use.tex  termsanddefs.tex
documents/LaTeX/S-2014-003/: S-2014-003.tex  appendixA.tex  appendixB.tex  appendixC.tex  histanddocs.tex  introduction.tex  references.tex  scope.tex  specification.tex  termsanddefs.tex
documents/LaTeX/S-2014-004/: S-2014-004.tex  histanddocs.tex  introduction.tex  references.tex  scope.tex  specification.tex  termsanddefs.tex
documents/LaTeX/S-2014-006/: S-2014-006.tex  acknowledgements.tex  appendix-changes.tex  appendix-cineonlog.tex  appendix-interpolation.tex  appendix-schema.tex  appendixA.tex  appendixB.tex  (+15 more)
formats/amf/: README.md
images/: README  README.md  README.rst
lib/: Lib.Academy.ColorSpaces.ctl  Lib.Academy.DisplayEncoding.ctl  Lib.Academy.OutputTransform.ctl  Lib.Academy.Tonescale.ctl  Lib.Academy.Utilities.ctl
transforms/: renameCTL.py
transforms/ctl/: README-MATRIX.md
(+5482 files in other folders)
