## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = ctl openexr dpx util doc

DIST_SUBDIRS = \
	$(SUBDIRS) \
	vc

EXTRA_DIST = \
	AUTHORS COPYING ChangeLog INSTALL LICENSE NEWS \
        README README.CVS README.OSX README.win32 bootstrap

#pkgconfigdir = $(libdir)/pkgconfig
#pkgconfig_DATA = CTL.pc

